# accelo-datasource

./: Cargo.toml
src/: lib.rs
src/core/: error.rs
src/features/auth/: datasource.rs  models.rs
src/features/project/: datasource.rs  mod.rs
src/features/project/models/: count_jobs.rs  get_job.rs  job.rs  job_type.rs  list_job_types.rs  list_jobs.rs  meta.rs  mod.rs
src/features/project/properties/: fields.rs  get_job_properties.rs  list_jobs_properties.rs  mod.rs
